--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,17 +23,18 @@
 
             <div class="flex items-center space-x-4">
                 {% if request.user.is_authenticated %}
+                    <a href="{% url 'password-change' %}" class="text-white hover:text-gray-200">Password Change</a>
                     <a href="/rooms/" class="text-white hover:text-gray-200">Channels</a>
-
+                {% if user.is_superuser %}
+                    <a href="{% url 'users-list' %}" class="text-white hover:text-gray-200">Users</a>
+                {% endif %}
                     <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Logout</a>
                 {% else %}
                     <a href="/login/" class="text-white hover:text-gray-200">Login</a>
-            
                     <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700">Signup</a>
                 {% endif %}
             </div>
         </nav>
-
         {% block content %}
         {% endblock %}
 
