--- a/room/templates/room/room.html
+++ b/room/templates/room/room.html
@@ -5,7 +5,6 @@
 <div class="p-10 lg:p-20 text-center">
     <h1 class="text-3xl lg:text-6xl text-white">{{ room.name }}</h1>
 </div>
-
 <div class="lg:w-2/4 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
     <div class="chat-messages space-y-3" id="chat-messages">
         {% for m in messages %}
@@ -16,7 +15,6 @@
 
 <div class="lg:w-2/4 mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
     <form method="post" action="." class="flex">
-        {% csrf_token %}
         <input type="text" name="content" class="flex-1 mr-3" placeholder="Your message..." id="chat-message-input">
         <button class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700" id="chat-message-submit">Submit</button>
     </form>
@@ -36,7 +34,7 @@
     const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
     const userName = JSON.parse(document.getElementById('json-username').textContent);
     const chatSocket = new WebSocket(
-        (window.location.protocol === 'https:' ? 'wss://' : 'ws://')
+        'ws://'
         + window.location.host
         + '/ws/'
         + roomName
@@ -44,8 +42,7 @@
     );
 
     chatSocket.onclose = function(e) {
-        console.error('Chat socket closed unexpectedly.');
-        alert('The WebSocket connection was closed. Please refresh the page.');
+        console.log('onclose');
     };
 
     chatSocket.onmessage = function(e) {
@@ -54,7 +51,6 @@
         if (data.message) {
             document.querySelector('#chat-messages').innerHTML += ('<b>' + data.username + '</b>: ' + data.message + '<br>');
         } else {
-            alert('Message sent');
         }
 
         scrollToBottom();
@@ -91,7 +87,7 @@
     };
 
     function scrollToBottom() {
-        const objDiv = document.getElementById('chat-messages');
+        let objDiv = document.getElementById('chat-messages');
         objDiv.scrollTop = objDiv.scrollHeight;
     }
 
